add and refactor unittests