@@ -6,8 +6,6 @@ import nilsot1.backend.model.*;
 import nilsot1.backend.repository.UserRepo;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -22,24 +20,28 @@ class UserServiceTest {
 
     UserService userService = new UserService(userRepo, idService);
 
+    String userId = "1";
+    String userName = "test name";
+    String colorRoomSetId = "1";
+    String roomId = "room Id";
+    String roomName = "test room";
+    ColorPalette colorPalette = new ColorPalette(new int[][]{{1, 1, 1}, {1, 1, 1}, {1, 1, 1}});
+    Room room = new Room(roomId, roomName);
+    ColorRoomSet colorRoomSet = new ColorRoomSet(colorRoomSetId, room, colorPalette);
+    User testUser = new User(userId, userName, List.of(colorRoomSet));
+
+
     @Test
     void testGetAllColorRoomSets_shouldReturnListOfColorRoomSet_whenCalledWithUserId() throws UserNotFoundException {
         //GIVEN
-        User testUser = new User("1", "test Name", new ArrayList<>());
         when(userRepo.findById(testUser.getUserId())).thenReturn(Optional.of(testUser));
-
-        ColorRoomSet colorRoomSet1 = new ColorRoomSet("id1", new Room("roomId1", "roomName1"), new ColorPalette());
-        ColorRoomSet colorRoomSet2 = new ColorRoomSet("id2", new Room("roomId2", "roomName2"), new ColorPalette());
-
-        testUser.setColorRoomSets(List.of(colorRoomSet1, colorRoomSet2));
 
         //WHEN
         List<ColorRoomSet> actual = userService.getAllColorRoomSets(testUser.getUserId());
 
         //THEN
-        List<ColorRoomSet> expected = Arrays.asList(
-                new ColorRoomSet("id1", new Room("roomId1", "roomName1"), new ColorPalette()),
-                new ColorRoomSet("id2", new Room("roomId2", "roomName2"), new ColorPalette())
+        List<ColorRoomSet> expected = List.of(
+                new ColorRoomSet(colorRoomSetId, new Room(roomId, roomName), colorPalette)
         );
 
         verify(userRepo).findById(testUser.getUserId());
@@ -63,86 +65,77 @@ class UserServiceTest {
     @Test
     void testGetColorRoomSetById_shouldReturnColorRoomSet_whenCalledWithUserIdAndColorRoomSetId() throws UserNotFoundException, ColorRoomSetNotFoundException {
         // GIVEN
-        User testUser = new User("1", "test Name", new ArrayList<>());
         when(userRepo.findById(testUser.getUserId())).thenReturn(Optional.of(testUser));
 
-        ColorRoomSet colorRoomSet1 = new ColorRoomSet("id1", new Room("roomId1", "roomName1"), new ColorPalette());
-        ColorRoomSet colorRoomSet2 = new ColorRoomSet("id2", new Room("roomId2", "roomName2"), new ColorPalette());
-
-        testUser.setColorRoomSets(List.of(colorRoomSet1, colorRoomSet2));
-
         // WHEN
-        ColorRoomSet actual = userService.getColorRoomSetById(testUser.getUserId(), colorRoomSet1.getColorRoomSetId());
+        ColorRoomSet actual = userService.getColorRoomSetById(testUser.getUserId(), colorRoomSet.getColorRoomSetId());
 
         // THEN
-        ColorRoomSet expected = new ColorRoomSet("id1", new Room("roomId1", "roomName1"), new ColorPalette());
+        ColorRoomSet expected = colorRoomSet;
 
         verify(userRepo).findById(testUser.getUserId());
         assertEquals(expected, actual);
     }
 
     @Test
-    void testUpdateColorPalette_shouldUpdateColorPalette_whenColorRoomSetExists() throws UserNotFoundException {
-        // GIVEN
-        String userId = "1";
-        String userId2 = "2";
+    void testUpdateColorPalette_shouldUpdateColorPalette_whenColorRoomSetExists() throws UserNotFoundException, ColorRoomSetNotFoundException, ColorRoomSetNotFoundException {
+        // Given
+        when(userRepo.findById(userId)).thenReturn(Optional.of(testUser));
+        ColorPalette newColorPalette = new ColorPalette(new int[][]{{2, 2, 2}, {2, 2, 2}, {2, 2, 2}});
 
-        String colorRoomSetId = "test-id";
-        String colorRoomSetId2 = "test-id2";
+        // When
+        User updatedUser = userService.updateColorPalette(userId, colorRoomSetId, newColorPalette);
 
-        ColorPalette colorPalette1 = new ColorPalette(new int[][]{{1, 1, 1}, {1, 1, 1}});
-        ColorPalette colorPalette2 = new ColorPalette(new int[][]{{2, 2, 2}, {2, 2, 2}});
+        ColorRoomSet updatedSet = userService.getColorRoomSetById(userId, colorRoomSetId);
 
-        List<ColorRoomSet> existingColorRoomSets = new ArrayList<>();
-        ColorRoomSet existingColorRoomSet = new ColorRoomSet(colorRoomSetId, new Room("roomId1", "roomName1"), colorPalette1);
-        existingColorRoomSets.add(existingColorRoomSet);
+        ColorPalette actual = updatedSet.getSavedColors();
 
-        List<ColorRoomSet> existingColorRoomSets2 = new ArrayList<>();
-        ColorRoomSet existingColorRoomSet2 = new ColorRoomSet(colorRoomSetId2, new Room("roomId2", "roomName2"), colorPalette2);
-        existingColorRoomSets2.add(existingColorRoomSet);
+        // Then
 
-
-        User existingUser = new User(userId, "test Name", existingColorRoomSets);
-
-        User uppdatedUser = new User(userId2, "test Name2", existingColorRoomSets2);
-
-        when(userRepo.findById(userId)).thenReturn(Optional.of(existingUser));
-
-
-
-        // WHEN
-
-        userService.updateColorPalette(userId2, colorRoomSetId2, colorPalette1);
-
-        when(userRepo.save(existingUser)).thenReturn(existingUser);
-
-        // THEN
-
-        verify(userRepo).findById(userId);
-        verify(userRepo).save(existingUser);
-        System.out.println(uppdatedUser);
-        assertEquals(colorPalette1, existingUser.getColorRoomSets().get(0).getSavedColors());
+        assertEquals(newColorPalette, actual);
     }
 
+    @Test
+    void testUpdateColorPalette_shouldThrowColorRoomSetException_whenColorRoomSetNotFound() {
+        // GIVEN
+        when(userRepo.findById(userId)).thenReturn(Optional.of(testUser));
+        String nonExistentColorRoomSetId = "nonexistent-id";
 
-/*    @Test
+        // WHEN & THEN
+        assertThrows(ColorRoomSetNotFoundException.class, () -> userService.updateColorPalette(userId, nonExistentColorRoomSetId, colorPalette));
+    }
+
+    @Test
+    void testDeleteColorRoomSetById_shouldDeleteColorRoomSet_whenColorRoomSetExists() throws UserNotFoundException, ColorRoomSetNotFoundException {
+        // Given
+        when(userRepo.findById(userId)).thenReturn(Optional.of(testUser));
+
+        // When
+        userService.deleteColorRoomSetById(userId, colorRoomSetId);
+        User updatedUser = userService.getUserById(userId);
+
+        int actual = updatedUser.getColorRoomSets().size();
+
+        // Then
+        assertEquals(0, actual);
+    }
+
+    @Test
     void testSaveNewColorRoomSet_shouldReturnSavedColorRoomSet_whenNewColoRoomSet() throws UserNotFoundException {
 
         // GIVEN
-        User testUser = new User("1", "test Name", new ArrayList<>());
-        when(userRepo.findById(testUser.getUserId())).thenReturn(Optional.of(testUser));
+        when(userRepo.findById(userId)).thenReturn(Optional.of(testUser));
 
-        ColorRoomSetDTO colorRoomSetDTO = new ColorRoomSetDTO(new Room("roomId1", "roomName1"), new ColorPalette());
-        ColorRoomSet colorRoomSetToSave = new ColorRoomSet("test-id", new Room("roomId1", "roomName1"), new ColorPalette());
+        ColorPalette newColorPalette = new ColorPalette(new int[][]{{2, 2, 2}, {2, 2, 2}, {2, 2, 2}});
+
+        ColorRoomSetDTO colorRoomSetDTO = new ColorRoomSetDTO(room, newColorPalette);
 
         when(idService.randomId()).thenReturn("test-id");
 
         // WHEN
-        User actual = colorRoomSetService.saveNewColorRoomSet(colorRoomSetDTO, testUser.getUserId());
+        User actual = userService.saveNewColorRoomSet(colorRoomSetDTO, userId);
 
         // THEN
-        User userToSave = colorRoomSetService.saveNewColorRoomSet(new ColorRoomSetDTO(colorRoomSetToSave), testUser.getUserId());
-        verify(userRepo, times(1)).save(userToSave);
-        assertEquals(1, actual.getColorRoomSets().size());
-    }*/
+        assertEquals(2, actual.getColorRoomSets().size());
+    }
 }
